istio/traffic_management/01_routing_policy-v1.yaml
# How to route traffic to a given destination
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-data-service
spec:
  hosts:
    - user-data-service #.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: user-data-service #.default.svc.cluster.local
            subset: v1
