istio/traffic_management/02_destination_rule.yaml
# Configure what happens to the traffic to that destination
# Applied after VS routing rules evaluation
# Implements round robin LB by default
# Destination Rules : Random, Weighted, Least
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-data-service
spec:
  host: user-data-service # target host
  subsets:
    - name: v1
      labels:
        app: user-data-service
        version: v1
    - name: v2
      labels:
        app: user-data-service
        version: v2
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
