istio/traffic_management/03_routing_policy_header.yaml
# How to route traffic to a given destination
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-data-service
spec:
  hosts:
    - user-data-service.default.svc.cluster.local
  http:
    - match:
        - headers:
            user-agent:
              exact: debug  # Match the exact value "v2" of the header "my-custom-header"
      route:
        - destination:
            host: user-data-service # can be ip address, DNS or k8 service name (don't need to be part of istio)
            subset: v2  # Route to the v2 subset of user-data-service
    - route:
        - destination:
            host: user-data-service
            subset: v1  # Default route to the v1 subset if the header is not set or doesn't match
