istio/traffic_management/06_gateway_multi_host_svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-auth-gateway
  namespace: default  # Replace with the namespace where your Gateway and VirtualService will be deployed
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"  # Replace with the hostname or domain name for the external traffic
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-auth-virtualservice
spec:
  hosts:
    - "user-auth.example.com"  # Set the host to localhost
  gateways:
    - default/user-auth-gateway  # Replace 'default' with the actual namespace where the Gateway is deployed
  http:
    - route:
        - destination:
            host: user-auth-service
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  hosts:
    - "my-grafana-service.com"  # Set the host to localhost
  gateways:
    - default/user-auth-gateway  # Replace 'default' with the actual namespace where the Gateway is deployed
  http:
    - route:
        - destination:
            host: my-grafana-service
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 31930
